crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_simple_enum.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Display {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let v0 = p.parse::<Ident>()?;
            return Ok(Self::Block { 0: v0 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
