crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_simple_struct.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::Parse;
        Ok(Self {})
    }
}
