crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_single_field_tuple_struct.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Opacity {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let v0 = p.parse::<Number>()?;
        return Ok(Self { 0: v0 });
    }
}
