crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_all_must_occur_with_newtype_keyword.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for AllMustOccurNewtypeTest {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut v0: Option<Auto> = None;
        let mut v1: Option<None> = None;
        let mut v2: Option<Length> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Auto>() && p.to_atom::<Auto>(c) == Auto {
                v0 = Some(p.parse::<Auto>()?);
                continue;
            }
            if v1.is_none() && p.peek::<None>() && p.to_atom::<None>(c) == None {
                v1 = Some(p.parse::<None>()?);
                continue;
            }
            if v2.is_none() && p.peek::<Length>() {
                v2 = Some(p.parse::<Length>()?);
                continue;
            }
            break;
        }
        if v0.is_none() || v1.is_none() || v2.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self {
            auto_value: v0.unwrap(),
            none_value: v1.unwrap(),
            length: v2.unwrap(),
        });
    }
}
