crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_one_must_occur_with_optionals.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for OneMustOccurTest {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut v0: Option<Foo> = None;
        let mut v1: Option<Bar> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Foo>() {
                v0 = Some(p.parse::<Foo>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Bar>() {
                v1 = Some(p.parse::<Bar>()?);
                continue;
            }
            break;
        }
        if v0.is_none() && v1.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self { foo: v0, bar: v1 });
    }
}
