crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_regular_with_keyword_pattern.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for RegularKeywordTest {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let v0 = {
            let c = p.peek_n(1);
            if p.equals_atom(c.into(), &FooKeywords::Auto) {
                p.parse::<AutoValue>()?
            } else {
                return Err(
                    ::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected),
                )?;
            }
        };
        let v1 = p.parse::<Length>()?;
        return Ok(Self { auto_value: v0, length: v1 });
    }
}
