crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_all_must_occur_and_range.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for AutoAndLengthWithRange {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Peek, Build};
        let mut auto: Option<AutoKeyword> = None;
        let mut length: Option<Length> = None;
        loop {
            let c = p.peek_n(1);
            if auto.is_none() && <AutoKeyword>::peek(p, c) {
                auto = Some(p.parse::<AutoKeyword>()?);
                continue;
            }
            if length.is_none() && <Length>::peek(p, c) {
                let val = p.parse::<Length>()?;
                if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&val) {
                    if !(0..=100).contains(&i) {
                        use ::css_parse::ToSpan;
                        Err(
                            crate::diagnostics::NumberOutOfBounds(
                                i,
                                format!("{}..={}", 0, 100),
                                val.to_span(),
                            ),
                        )?
                    }
                }
                length = Some(val);
                continue;
            }
            break;
        }
        if auto.is_none() || length.is_none() {
            let c = p.peek_n(1);
            Err(crate::diagnostics::Unexpected(c))?
        }
        Ok(Self {
            auto: auto.unwrap(),
            length: length.unwrap(),
        })
    }
}
